# webremo

./: .eslintrc.cjs  README.md  compose.yaml  index.html  nginx.conf  package.json  pnpm-lock.yaml
server/: Cargo.toml
server/src/: main.rs
src/: App.tsx  main.tsx  vite-env.d.ts
src/apis/: aircon.ts  appliance.ts  client.ts  device.ts  light.ts  signal.ts  tv.ts
src/components/: AirConForm.tsx  ApplianceCard.tsx  Appliances.tsx  CardForm.tsx  CustomCard.tsx  Devices.tsx  IRForm.tsx  LightForm.tsx  Progress.tsx  TVForm.tsx
src/stores/: apps.ts  devices.ts  index.ts  loader.ts  progress.ts
